Upgrade to modern Java 11+ with Groovy 4, Spring 5, Jetty 10, and updated dependencies
- Target Java 11 source/target/release in maven-compiler-plugin
- Groovy 2.5.6 -> 4.0.24 (org.apache.groovy groupId)
- Spring Framework 4.3.23 -> 5.3.39
- Jetty 9.4.17 -> 10.0.24
- BouncyCastle 1.61 -> 1.78.1 (jdk18on artifacts)
- H2 Database 1.4.199 -> 2.2.224
- Servlet API 3.1.0 -> 4.0.1
- WireMock 2.x -> 3.6.0 (org.wiremock groupId)
- maven-plugin-plugin 3.5 -> 3.13.1
- maven-compiler-plugin 3.6.0 -> 3.13.0
- maven-shade-plugin 3.1.1 -> 3.6.0

Code fixes:
- Class.newInstance() -> getDeclaredConstructor().newInstance()
- groovy.util.slurpersupport -> groovy.xml.slurpersupport (Groovy 4)
- CachedField.field -> CachedField.getCachedField() (Groovy 4)
- Jetty Configuration.ClassList removed; addWebInfJar -> addWebInfResource
- Jetty WebSocket artifact: javax-websocket-server-impl -> websocket-javax-server
- StatsASTTransformation: robust void type check for Groovy 4 compatibility
- Groovity scripts: fix void return, type resolution, and syntax for Groovy 4
- Added JAXB/activation runtime deps for Java 11+ (removed from JDK)
- Broadened exception handling for getDeclaredConstructor().newInstance()

Co-Authored-By: Devin AI <158243242+devin-ai-integration[bot]@users.noreply.github.com>